@@ -17,7 +17,7 @@
 		<div class="div2nd"><label for="###PREFIX_ID###_submit_###UID###" class="hidden">###LABEL_SUBMIT###:</label><input type="image" name="###PREFIX_ID###[submit]" id="###PREFIX_ID###_submit_###UID###" src="/typo3conf/ext/ajaxsearch/res/button.gif" title="###TITLE_SUBMIT###" /></div>
 	</fieldset>
 	<input type="hidden" name="###PREFIX_ID###[lang]" value="###SYS_LANGUAGE_UID###" />
-	<div id="###PREFIX_ID###_choices_###UID###" class="tx-ajaxsearch-choices" style="display:none;"></div>
+	<div id="###PREFIX_ID###_choices_###UID###" class="tx_ajaxsearch_choices" style="display:none;"></div>
 </form>
 <script type="text/javascript">
         /*<![CDATA[*/
